# Throne

./: .gitignore  CMakeLists.txt  tools.sh
resource/: FragmentSample.frag  VertexSample.vert
source/: CMakeLists.txt  Game.cpp  Game.h  Log.cpp  Log.h  Main.cpp  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h
